@@ -1,3 +1,7 @@
+2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* delay/init.c, ratemon1/init.c: Clean up configuration.
+
 2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Add timer test.
